pulled strings from tr8n

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -651,21 +651,21 @@ ca:
     home:
       hero:
         heading: "Una Bíblia gratuïta al teu telèfon, tauleta i ordinador."
-        description: "YouVersion és una Bíblia simple i sense publicitat que et posa la Paraula de Déu a la teva vida diària."
-        learn more: "Més informació a sota"
+        description: "YouVersion és una Bíblia simple i sense publicitat que posa la Paraula de Déu a la teva vida diària."
+        learn more: "Més informació"
         start reading: "Comença a llegir"
         skip in future: "No mostris aquesta pàgina en el futur"
         now skipped: "Aquesta pàgina ja no es mostrarà."
       features:
         read heading: "Llegeix la Bíblia"
-        read description: "Escull entre <strong>centenars de versions de la Bíblia i idiomes</strong>. Compara dues versions, una al costat de l'altra. També pots escollir el tipus i la mida de lletra. Fes que la teva experiència de la Bíblia en línia sigui com a tu t'agrada."
+        read description: "Escull entre <strong>centenars d'idiomes i de versions de la Bíblia</strong>. Compara dues versions, una al costat de l'altra. Tria el tipus i la mida de la lletra. Fes que la teva experiència de la Bíblia en línia sigui tal i com a tu t'agrada."
         study heading: "Estudia la Bíblia."
         study description: "<strong>Ressalta</strong> en el teu color preferit, <strong>marca</strong> els teus versets preferits, i pren notes sobre el que estàs aprenent. No només estàs passant temps amb la Paraula de Déu; estàs construint una història de la teva interacció amb la Bíblia."
         subscribe heading: "Subscriu-te a Plans de la Bíblia."
         subscribe description: "Cobreix tota la Bíblia, concentra't en un tema, o llegeix un devocional d'un mestre. Escull el teu pla i cada dia trobaràs una selecció de la Bíblia esperant-te."
         download heading: "Porta la Bíblia amb tu."
         download description: "<a href='http://youversion.com/download'>Descarrega</a> l'aplicació de la Bíblia gratuïtament a qualsevol dispositiu mòbil. Quan utilitzis l'aplicació, les teves notes i marcadors i molt més es sincronitzaran automàticament en tots els teus dispositius."
-      get started: "Comença amb el teu compte gratuït."
+      get started: "Fes-te un compte gratuït."
       word with you: "La Paraula de Déu és amb tu."
       download action: "Descarrega l'aplicació de la Bíblia"
       download description: "Descarrega YouVersion, l'aplicació gratuïta de la Bíblia, en el teu dispositiu mòbil i tindràs la teva Bíblia amb tu allà on vagis."
