--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -11,7 +11,7 @@ hi:
   thanks for your donation: "आपके योगदान के  लिए धन्यवाद!"
   thanks authorization: "आपके अनुरोध पर रसीद इनबॉक्स में उपलब्ध करा दिया जायेगा।"
   donation error: "हम आपसे क्षमा चाहते हैं। आपके योगदान प्राप्त करने में कुछ कठिनाई हैं। वह %{error_text} हैं।"
-  created ago: "निर्मित%{time_ago} पहले "
+  created ago: "निर्मित %{time_ago} पहले "
   copy: "कॉपी"
   copy confirmed: "कॉपी हुआ "
   new note: "नई टिप्पणी "
@@ -157,7 +157,7 @@ hi:
     delete: "इस टिप्पणी को डिलीट कीजिए"
     confirm delete: "हाँ, मैं निश्चित हूँ "
     write new: "नई टिप्पणी लिखिए"
-    not found: "YouVersion आपको बाइबिल के verse(s) को विडियो, ऑडियो या अन्य वेबसाइट से लिंक करने की अनुमति देता हैं। यह YouVersion समुदाय में भाग लेने का एक बहुत आसान तरीका हैं, और आपके बाइबिल से गृहीत सोच और समझ को भी शेयर करने का साधन हैं। इसका शुरुआत आप अभी अपने पद्य को बाइबिल रीडर में चयन कर एवं अपनी टिप्पणी को जोड़कर कर सकते हैं।"
+    not found: "YouVersion आपको बाइबिल के पद्य(s) को विडियो, ऑडियो या अन्य वेबसाइट से लिंक करने की अनुमति देता हैं। यह YouVersion समुदाय में भाग लेने का एक बहुत आसान तरीका हैं, और आपके बाइबिल से गृहीत सोच और समझ को भी शेयर करने का साधन हैं। इसका शुरुआत आप अभी अपने पद्य को बाइबिल रीडर में चयन कर एवं अपनी टिप्पणी को जोड़कर कर सकते हैं।"
     cancel: "कैंसिल "
     pop out: "पाप आउट  "
     notes i like: "मेरी पसंदीद टिप्पणीयाँ "
@@ -166,7 +166,7 @@ hi:
     successfully deleted: "टिपण्णी हटाई गयी हैं"
   ref:
     loading secondary: "माध्यमिक संस्करण में रिफरेन्स लोड किया जा रहा हैं ......."
-    clear verses: "चयनित पधों को clear करें"
+    clear verses: "चयनित पधों को क्लियर करें"
     choose book and chapter: "ग्रन्थ +अध्याय चुनिए "
     choose version: "संस्करण चुनिए "
     choose second version: "माध्यमिक संस्करण चुनिए"
@@ -205,7 +205,7 @@ hi:
     thanks for registering: "दर्ज करने के लिए धन्यवाद!"
     welcome to youversion: "YouVersion समाज में आपका स्वागत हैं।"
     confirm email: "कृपया अपना इमेल जांच करे और लिंक क्लिक कर अपना पंजीकरण सुनिश्चित करे।"
-    sign up for an account: "अपना मुफ्त YouVersion अकाउंट बनायिए"
+    sign up for an account: "अपना मुफ्त YouVersion अकाउंट निर्मित करे "
     follow: "अनुयाय "
     follow user: "अनुयाय%{user}"
     unfollow: "अनुयाय ना करे"
@@ -233,7 +233,7 @@ hi:
     edit account_existence: "अकाउंट डिलीट करें"
     delete account button: "मेरा YouVersion अकाउंट डिलीट कीजिए"
     no devices: "आपके YouVersion अकाउंट से कोई डिवैसिस कनेक्टेड नहीं हैं"
-    no devices download copy: "बाइबिल app ऑनलाइन बाइबिल YouVersion पर आधारित एक मुफ्त मोबाइल बाइबिल हैं जो लगभग किसी भी फ़ोन पर इन्स्टॉल किया जा सकता हैं।बाइबिल  App उपयोगकर्ता को बाइबिल पढने में तथा पद्य को अपने सामाजिक नेटवर्क पर share करने ,बुकमार्क और कई ज्यादा सुविधा एक ही स्वरुप में तेजी से वर्दित मोबाइल जीवन शैली के लिए उपलब्ध कराता हैं Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> अपने मोबाइल डिवैसिस पर बाइबिल App डाउनलोड करने के लिए और अपने अकाउंट कनेक्ट करने हेतु विवरण।"
+    no devices download copy: "बाइबिल app ऑनलाइन बाइबिल YouVersion पर आधारित एक मुफ्त मोबाइल बाइबिल हैं जो लगभग किसी भी फ़ोन पर इन्स्टॉल किया जा सकता हैं।बाइबिल  App उपयोगकर्ता को बाइबिल पढने में तथा पद्य को अपने सामाजिक नेटवर्क पर शेयर करने ,बुकमार्क और कई ज्यादा सुविधा एक ही स्वरुप में तेजी से वर्दित मोबाइल जीवन शैली के लिए उपलब्ध कराता हैं Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> अपने मोबाइल डिवैसिस पर बाइबिल App डाउनलोड करने के लिए और अपने अकाउंट कनेक्ट करने हेतु विवरण।"
     yes delete: "हाँ, मेरा अकाउंट डिलीट कीजिए"
     account delete success: "आपका YouVersion अकाउंट सफलतापूर्वक डिलीट किया गया हैं। हम आशा करते हैं की आप बाइबिल से जुड़े रहने की अन्य कोशिश करेंगे| आप अभी भी कुछ app उपयोग कर सकते हैं जैसे <a href=http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "यदि आप अपने अकाउंट को डिलीट करते हैं तो आप स्थायी रूप से आपकी जानकारी, इतिहास और नीजी कार्य (जैसे टिपण्णी, बुकमार्क और  हाइलाइट आदि) जो YouVersion.com के अन्तर्गत हैं, हट जाएगी। यह कारवाई आप के द्वारा या हमारी टीम के द्वारा पुन: प्रारंभ करने में नामुमकिन हैं। यदि आप निश्चित हैं, कृपया अपनी कारवाई जारी रखे।"
@@ -399,7 +399,7 @@ hi:
     all: "समूचे"
     labels label: "लेबिल:"
     title: "बुकमार्क्स"
-    not found: "बुकमार्क्स आपको तुरंत आपके पसंदीदा पद्य या आपके द्वारा पढ़ा हुआ विशेष किताब के आखरी अध्याय पर ले जायेगा । बुकमार्क से जुड़ने के लिए बाइबिल रीडर से verses सेलेक्ट करे और रीडर के ऊपर दर्शाए गए सेलेक्टेड बटन क्लिक कीजिए।"
+    not found: "बुकमार्क्स आपको तुरंत आपके पसंदीदा पद्य या आपके द्वारा पढ़ा हुआ विशेष किताब के आखरी अध्याय पर ले जायेगा । बुकमार्क से जुड़ने के लिए बाइबिल रीडर से पध्यों सेलेक्ट करे और रीडर के ऊपर दर्शाए गए सेलेक्टेड बटन क्लिक कीजिए।"
     other user not found: "%{username} के द्वारा कोई बुकमार्क्स save नहीं किया गया हैं।"
     creation form errors: "निम्नलिखित error(s) के कारण बुकमार्क निर्माण विफल हुआ:"
     successfully created: "बुकमार्क पाया गया "
@@ -421,12 +421,12 @@ hi:
   plans:
     title: "पाठक योजनाएँ  "
     browse by category: "श्रेणी के अनुसार ब्राउस कीजिए"
-    browse plans: "%{category}योजनाएँ ब्राउस कीजिए"
+    browse plans: "%{category} योजनाएँ ब्राउस कीजिए"
     swap list localization: "(<a href='%{swap_link}'>में देखे%{swap_locale}</a>)"
     showing language filtered: "%{lang_name}भाषा में केवल उपलब्ध पाठक योजना "
     all: "समस्त"
     all plans: "समस्त योजनाएँ "
-    all category plans: "समस्त%{category} योजनाएँ "
+    all category plans: "समस्त %{category} योजनाएँ "
     my plans: "मेरी योजनाएँ"
     none found: "आपके द्वारा अनुरोध किया गया योजना उपलब्ध नहीं हैं।कृपया आपकी खोज के दायरे को सीमित न करें।"
     about publisher: "प्रकाशक के बारे में विवरण"
@@ -451,7 +451,7 @@ hi:
     plan settings: "योजना सेटिंग्स "
     settings: "सेटिंग्स"
     search: "अन्वेषण"
-    search placeholder: "सर्च%{category}योजनाऍ "
+    search placeholder: "सर्च %{category} योजनाऍ "
     subscribe to plan: "इस पाठक योजना को शुरू करें"
     previous day: "पिछला दिन"
     next day: "अगला दिन"
@@ -527,8 +527,8 @@ hi:
     benefits title: "पूरा लाभ उठायिए"
     benefits blurb: "YouVersion अकाउंट से आप को बहुत सी सुविधाएँ उपलब्ध होगी,उदहारण बुकमार्क्स और टिप्पणियां।जिसे साइन इन कर कहीं पर भी किसी भी डिवाइस पर पा सकते हैं। एक अकाउंट से आप बाईबिल अपने मित्रों के साथ शेयर कर सकते हैं।कृपया थोडा समय निकालकर साइन अप कीजिए !"
     plan blurb: "ऐसा लगता हैं आप YouVersion पाठक योजना के सदस्य बनना चाहते हैं। कृपया साइन  इन करे या एक नया अकाउंट निर्मित करें और अपनी योजना की शुरुआत करें।"
-    bookmark blurb: "ऐसा लगता हैं आप बुकमार्क्स उपयोग करना चाहते है। यह एक लाजवाब कदम हैं। यदि आप प्रभु के वचनों को याद रखना चाहते हैं या पसंदिता वचनों को मित्रों के साथ शेयर करना चाहते हैं, बुकमार्क्स आपको मददगार साबित होगा। इसलिए कृपया साइन इन  करे या एक नया अकाउंट create करें।"
-    friends blurb: "ऐसा लगता हैं आप अपने मित्रो से अपने बाइबिल से गृहीत वचनों को शेयर करना चाहते हैं और पाठक योजना के track में भी रहना चाहते हैं।यह एक अच्छा विचार हैं। इस के लिए साइन इन करे और नीचे दिए गए स्थान में अकाउंट create करें।"
+    bookmark blurb: "ऐसा लगता हैं आप बुकमार्क्स उपयोग करना चाहते है। यह एक लाजवाब कदम हैं। यदि आप प्रभु के वचनों को याद रखना चाहते हैं या पसंदिता वचनों को मित्रों के साथ शेयर करना चाहते हैं, बुकमार्क्स आपको मददगार साबित होगा। इसलिए कृपया साइन इन  करे या एक नया अकाउंट निर्मित \nकरें।"
+    friends blurb: "ऐसा लगता हैं आप अपने मित्रो से अपने बाइबिल से गृहीत वचनों को शेयर करना चाहते हैं और पाठक योजना के ट्रैक में भी रहना चाहते हैं।यह एक अच्छा विचार हैं। इस के लिए साइन इन करे और नीचे दिए गए स्थान में अकाउंट create करें।"
     share blurb: "ऐसा लगता हैं आप बाइबिल से कुछ लेख शेयर करना चाहते हैं?उच्तम विचार! यह आप फेसबुक या ट्विटर के द्वारा कर सकते हैं।नीचे साइन इन करे या नया अकाउंट बनाये और शुरू हो जाइये!"
     highlight blurb: "ऐसा लगता हैं कि आप वचनों को  हाइलाइट करना चाहते हैं। हाइलाइट आपको अपने पसंदिता पध को व्यवस्थित रखने में मदद करेगा। साइन इन करें या एक नया अकाउंट बनाकर शुरूआत कीजिए।"
     note blurb: "ऐसा लगता हैं कि प्रस्तुत वचनों से आप टिप्पणियाँ लेना चाहते हैं। टिप्पणियाँ आपको प्रभु के वचन से गृहीत सत्य को याद रखने और उसे अपने जीवन में लागू करने में मद्दतगार साबित होगा। साइन इन या नया अकाउंट निर्मित कर शुरुआत करे।"
@@ -623,7 +623,7 @@ hi:
     h2: "प्रभु का वचन आपके साथ"
     h3: "YouVersion दुनिया भर में उपलब्ध "
     h3 sub: "दुनिया भर में 100 से अधिक भाषाओँ में उपलब्ध "
-    main: "100 से  अधिक संस्करणों का ऑडियो के साथ बाइबिल अपने मोबाइल पर पाइये। कई लाखों लोग इस बाइबिल App का उपयोग कर रहें हैं और प्रभु के वचन को उनके नित्य जीवन का अंग बना रहे हैं। मुफ्त App डाउनलोड करें और बुकमार्क्स, टिप्पणी, पाठक योजना दुनिया भर में कहीं से भी access करे।"
+    main: "100 से  अधिक संस्करणों का ऑडियो के साथ बाइबिल अपने मोबाइल पर पाइये। कई लाखों लोग इस बाइबिल App का उपयोग कर रहें हैं और प्रभु के वचन को उनके नित्य जीवन का अंग बना रहे हैं। मुफ्त App डाउनलोड करें और बुकमार्क्स, टिप्पणी, पाठक योजना दुनिया भर में कहीं से भी ऐक्सेस करे।"
     button h4: "Go to youversion.com/download"
     button h4 sub: "आपके मोबाइल पर "
     download now: "बाइबिल App डाउनलोड करें"
