--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -290,8 +290,8 @@ it:
       third party text: "La presente normativa sulla privacy è valida esclusivamente per siti e applicazioni di proprietà e gestiti da LifeChurch.tv. LifeChurch.tv non si ritiene responsabile di link ad altri siti accessibili dai nostri siti e servizi. Tali siti potrebbero inserire i propri cookie o altri file sul tuo computer, raccogliere dati o chiederti dati personali. È necessario conoscere bene le loro esclusive informative sulla privacy, qualora scegliessi di visitare i loro siti."
       information use title: "Modalità di utilizzo dei tuoi dati"
       information use text: "Quando effettui l'accesso a un determinato servizio per cui è richiesta la registrazione, ti chiediamo di fornire dati personali. Nel caso LifeChurch.tv volesse utilizzare questi dati per scopi diversi da quelli per cui sono stati raccolti, chiederemo il tuo consenso prima di farne uso. Puoi rifiutarti di fornire informazioni personali a qualsiasi nostro servizio, ma in tal caso potremmo non essere in grado di erogare il servizio. "
-      information security title: "Come proteggiamo le tue informazioni?"
-      information security text: "do not translate"
+      information security title: "Modalità di tutela dei tuoi dati"
+      information security text: "LifeChurch.tv non divulga i tuoi dati personali ad altri enti al di fuori di LifeChurch.tv senza il tuo esplicito consenso. LifeChurch.tv potrebbe condividere informazioni personali solo se ritiene in buona fede che l'accesso, l'utilizzo, la conservazione o la divulgazione di tali dati sia ragionevolmente necessario al fine di (a)"
       data integrity title: "Integrità dei Dati"
       data integrity text: "do not translate"
       information access title: "do not translate"
@@ -651,8 +651,8 @@ it:
     home:
       hero:
         heading: "Una Bibbia gratuita sul tuo telefono, tablet e computer."
-        description: "YouVersion è una Bibbie semplice e senza pubblicità che porta la Parola di Dio nella tua vita quotidiana."
-        learn more: "ulteriori particolari sotto"
+        description: "YouVersion è una Bibbia semplice e senza pubblicità che porta la Parola di Dio nella tua vita quotidiana."
+        learn more: "ulteriori particolari in fondo alla pagina"
         start reading: "Inizia a leggere"
         skip in future: "Salta questa pagina in futuro"
         now skipped: "Questa pagina ora sara saltata."
@@ -662,10 +662,10 @@ it:
         study heading: "Studia la Bibbia"
         study description: "<strong>Evidenzia</strong> nel tuo colore preferito, <strong>crea segnalibri</strong> per i tuoi versetti biblici preferiti, e scrivi delle note su quello che stai imparando. Oltre a passare del tempo nella Parola di Dio, stai costruendo la storia della tua interazione con la Bibbia."
         subscribe heading: "Sottoscrivi dei Piani di Lettura della Bibbia."
-        subscribe description: "Copri tutta la Bibbia, metti a fuoco un argomento, o leggi degli scritti devozionali di un bravo insegnante. Scegli il tuo piano e troverai ogni giorno una porzione della Bibbia che ti attende."
+        subscribe description: "Leggi tutta la Bibbia, metti a fuoco un argomento, o leggi degli scritti devozionali di un bravo insegnante. Scegli il tuo piano e troverai ogni giorno una porzione della Bibbia che ti attende."
         download heading: "Porta la Bibbia con te."
         download description: "<a href='http://youversion.com/download'>Scarica</a> l'App Bibbia gratuitamente su ogni dispositivo mobile. Quando usi l'app mobile, i tuoi appunti, segnalibri, evidenziazioni, piani ed altro saranno sincronizzati automaticamente su tutti i tuoi dispositivi."
-      get started: "Inizia con il tuo account gratuito."
+      get started: "Comincia con il tuo account gratuito."
       word with you: "La Parola di Dio è con te."
       download action: "Scarica l'App Bibbia"
       download description: "Scarica l'App Bibbia YouVersion gratuito sul tuo dispositivo mobile e potrai avere la tua Bibbia con te ovunque andrai."
