--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -448,6 +448,7 @@ mn:
     you have no plans: "Одоогоор та ямар ч уншлагын төлөвлөгөөнд нэгдээгүй байна. "
     no public plans: "%{username} -нд нийтийн уншлагын тѳлѳвлѳгѳѳг баихгүй."
     filter by lang: "Унших төлөвлөгөөнүүдийг Щэлээр Шүүх"
+    plan settings: "Тѳлѳвлѳгѳѳний Тохиргоо"
     settings: "Тохиргоо "
     search: "Хайх"
     search placeholder: "Тѳлѳвлѳгѳѳнүүд %{category} Хайх"
@@ -663,7 +664,7 @@ mn:
         subscribe heading: "Библийн Тѳлѳвлѳгѳѳг Бүртгүүлэх."
         subscribe description: "Библийг бүхлээр нь бүрх, сэдэв дээр төвлөр, эсвэл билэг авяастай багшын бичээсийг унш. Төлөвлөгөөгөө сонгоод, таныг хүлээж буй Библийн сонголтыг та унших болно."
         download heading: "Библи тантай хамт авч явах."
-        download description: "Библи Апп ямар ч үнэгүй <a href='http://youversion.com/download'>Татаж Авах</a>"
+        download description: "Үнэгүй Библи Апп ямар ч зѳѳврийн хэрэгсэл дээрээ <a href='http://youversion.com/download'>Татан ав</a> Та мобайл апп ашиглах үедээ, тэмдэглэл, хавчуурга, тодруулсан ишлэл, тѳлѳвлѳгѳѳ, гэх мэт бүх зѳѳбрийн хэрэгсэл дээрээ автомат зэрэг захжуулдаг."
       get started: "Үнэгүй данс нээх."
       word with you: "Бурханы Үгс тантай хамт."
       download action: "Библи Апп Татаж Авах"
