--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -650,21 +650,21 @@ nl:
       our action: "We zijn ervan op de hoogte gesteld en we gaan er binnenkort mee aan de gang."
     home:
       hero:
-        heading: "Een gratis Bijbel op je telefoon, tablet en computer."
-        description: "YouVersion is een eenvoudige, reclamevrije Bijbel die Gods Woord in je dagelijkse leven brengt."
+        heading: "Gratis Bijbel voor je telefoon, tablet en computer."
+        description: "YouVersion is een eenvoudige, reclamevrije Bijbel die Gods Woord je dagelijkse leven in brengt."
         learn more: "lees hieronder meer"
         start reading: "Begin met lezen"
         skip in future: "Sla deze pagina in de toekomst over"
         now skipped: "Deze pagina wordt nu overgeslaan."
       features:
         read heading: "Lees de Bijbel."
-        read description: "Maak een keuze uit <strong>honderden Bijbel-vertalingen en --talen</strong>. Vergelijk twee verschillende vertalingen naast elkaar. Je kan zelf bepalen welke letter je wil gebruiken en hoe groot die moet zijn. Je bepaalt zelf hoe je online Bijbel-ervaring eruit ziet."
+        read description: "Maak een keuze uit <strong>honderden Bijbel-vertalingen en talen</strong>. Vergelijk twee verschillende vertalingen naast elkaar. Je kan zelf bepalen welke letter je wil gebruiken en hoe groot die moet zijn. Je bepaalt zelf hoe je online Bijbel-ervaring eruit ziet."
         study heading: "Bestudeer de Bijbel."
-        study description: "<strong>Markeer</strong> in jouw lievelingskleur, plaats <strong>bladwijzers</strong> bij je favoriete Bijbel-verzen en maak notities over wat jij hebt geleerd. Je brengt niet alleen tijd door met Gods Woord, je bouwt aan een geschiedenis van jouw interactie met de Bijbel."
+        study description: "<strong>Markeer</strong> in je lievelingskleur, plaats <strong>bladwijzers</strong> bij je favoriete Bijbel-verzen en schrijf notities over wat jij hebt geleerd. Je brengt niet alleen tijd door met Gods Woord, maar je bouwt aan een geschiedenis van jouw interactie met de Bijbel."
         subscribe heading: "Abonneer je op Bijbel-leesplannen."
-        subscribe description: "Lees de hele Bijbel, focus op een thema of lees een overdenking van een getalenteerde leraar. Kies een leesplan en elke dat staat er een Bijbel-gedeelte voor je klaar."
+        subscribe description: "Lees de hele Bijbel, focus op een thema of volg de overdenkingen van een getalenteerde leraar. Kies een leesplan en elke dag staat er een Bijbel-gedeelte voor je klaar."
         download heading: "Neem de Bijbel met je mee."
-        download description: "<a href='http://youversion.com/download'>Download</a> de Bijbel App is gratis voor ieder mobiel apparaat. Wanneer je gebruikmaakt van de mobiele app worden je notities, bladwijzers, markeringen, leesplannen en meer automatisch gesynchroniseerd met al je toestellen."
+        download description: "<a href='http://youversion.com/download'>Download</a> de Bijbel App, hij is gratis voor elk mobiel apparaat. Wanneer je gebruikmaakt van de mobiele app worden je notities, bladwijzers, markeringen, leesplannen en meer automatisch gesynchroniseerd met al je toestellen."
       get started: "Ga aan de slag met jouw gratis account."
       word with you: "Gods Woord is met jou."
       download action: "Download de Bijbel App"
