--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -666,9 +666,9 @@ pt-PT:
         download heading: "Leve a Bíblia consigo."
         download description: "<a href=\"http://youversion.com/download\">Transfira</a> gratuitamente a App da Bíblia em qualquer dispositivo móvel. Quando usar a App, as suas notas, marcadores, destaques e planos serão automaticamente sincronizados em todos os seus dispositivos."
       get started: "Comece com a sua conta gratuita."
-      word with you: "A Palavra de Deus está consigo."
+      word with you: "A Palavra sempre consigo."
       download action: "Transfira a App da Bíblia"
-      download description: "Transfira gratuitamente a App da Bíblia no seu dispositivo móvel e terá a Bíblia consigo em qualquer lugar."
+      download description: "Transfira gratuitamente a App da Bíblia no seu dispositivo móvel e terá a Palavra de Deus consigo em qualquer lugar."
       world installs: "Instalações ao redor do mundo"
   shared:
     menu_settings:
