--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -103,7 +103,7 @@ ro:
   note: "Notiță nouă"
   selected: "Selectate"
   chapter: "Capitolul"
-  bible: "Biblie"
+  bible: "Biblia"
   notes title: "Notițe"
   friends: "Prieteni"
   groups: "Grupuri"
@@ -541,7 +541,7 @@ ro:
     creation error: "Ne pare rău, nu se poate evidenția."
     delete error: "Ne pare rău, evidențierea nu poate fi eliminată."
   searching:
-    bible: "Biblie"
+    bible: "Biblia"
     plans: "Planuri de citire"
     users: "Utilizatori"
     notes: "Notițe"
@@ -666,7 +666,7 @@ ro:
         download heading: "Biblia cu tine."
         download description: "<a href='http://youversion.com/download'>Descarcă</a> gratuit Aplicația Biblia pentru orice dispozitiv mobil. Când folosești aplicația mobilă, notițele, marcajele, evidențierile, planurile tale și multe altele vor fi sincronizate automat pe toate dispozitivele tale mobile."
       get started: "Începe cu un cont gratuit."
-      word with you: "Cuvântul lui Dumnezeu cu tine."
+      word with you: "Ai Scriptura mereu la tine."
       download action: "Descarcă Aplicația Biblia"
       download description: "Descarcă gratuit Aplicația Biblia pe dispozitivul tău mobil și vei avea Biblia cu tine oriunde mergi."
       world installs: "Instalări pe tot globul"
