--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -98,7 +98,7 @@ zh-CN:
   cancel: "取消"
   try the beta: "尝试测试版"
   welcome to the beta: "欢迎来到新版 YouVersion.com 网站！"
-  highlight: "标记"
+  highlight: "高亮显示经文"
   comment: "新评论"
   note: "新笔记"
   selected: "已选的"
@@ -222,7 +222,7 @@ zh-CN:
     my profile: "我的个人资料"
     edit profile: "编辑个人资料"
     update profile: "更新个人资料"
-    other user profile: "%{用户名}的个人主页"
+    other user profile: "%{username} 的个人档案"
     my password: "更改密码"
     edit password: "更改密码"
     picture: "相片"
@@ -468,7 +468,7 @@ zh-CN:
     end date _ before date string: "完成日期："
     are you behind: "有点落后了？"
     do you want to reset: "想不想重新来过？"
-    catch up text: "把今天的阅读内容转到您上次读完的地方 (计划的第% last_completed_day}天)"
+    catch up text: "把今天的阅读内容转到您上次读完的地方（计划的第 %{last_completed_day} 天）"
     catch up description only: "如果您的阅读进度滞后了，不用担心！您随时可以将现在的进度转到您上次完成的地方。"
     catch me up: "帮我跟上进度"
     restart description: "您可以重新开始您的计划。您的所有阅读历史和进度都将被重置到初始状态。"
@@ -512,7 +512,7 @@ zh-CN:
     catch up successful: "您现在已赶上进度！"
     restart successful: "读经计划已重新开始。"
     subscribe successful: "您已启用该读经计划。"
-    day number: "第%{day}天"
+    day number: "第 %{day} 天"
     which day in plan: "%{total}天中的第%{day}天"
     must start to complete: "请开始这个读经计划来保存已完成的读经！"
     invalid reference: "很抱歉！此读经计划中的参考经文可能不在您选择的圣经版本中。试着选择一个不同的圣经版本。如果您还是看到这条信息，请通知我们的 <a href='%{support_url}'>服务支持团队</a>！"
@@ -529,7 +529,7 @@ zh-CN:
     plan blurb: "看来您想开始一个读经计划！明智之举！读经计划可以帮助您，使圣经成为您日常生活中的一部分。赶紧创建一个账户或登录就可以开始了！"
     bookmark blurb: "看来您想使用书签功能！太好了！书签可以帮助您记忆、分享和标识您最喜欢的经句。赶紧创建一个账户或登录就可以开始了！"
     friends blurb: "看起来您想使用 YouVersion 和朋友互动交流。好主意！您可以和朋友分享读经内容，相互激励帮助跟进读经进度。登录或创建一个账户就可以开始了！"
-    share blurb: "看来您希望分享有关经文。太好了！您可以通过Facebook或Twitter及时分享神的话语。赶紧登录或注册一个免费账户就可以开始了！"
+    share blurb: "看来您希望分享有关经文。太好了！您可以通过 Facebook 或 Twitter 及时分享神的话语。赶紧登录或注册一个免费账户就可以开始了！"
     highlight blurb: "看起来您想高亮显示一段经文，太棒了！高亮显示经文可以帮您记忆和整理您喜欢的经节。登录或创建一个账户然后赶紧开始吧！"
     note blurb: "看起来您想就经文写一段笔记，太棒了！读经笔记可以帮您记忆和整理圣经中的真理。登录或创建一个账户然后赶紧开始吧！"
   audio:
@@ -651,7 +651,7 @@ zh-CN:
     home:
       hero:
         heading: "可用于手机、平板电脑或电脑上的免费圣经"
-        description: "YouVersion 是一款简单易用，且无广告的圣经软件，能将神的话语带入您的日常生活。"
+        description: "YouVersion 是一款简单易用，且无广告的圣经软件，期待将神的话语带入您的日常生活。"
         learn more: "若想了解详情，请继续往下阅读"
         start reading: "开始阅读"
         skip in future: "今后请自动跳过这一页"
@@ -660,7 +660,7 @@ zh-CN:
         read heading: "阅读圣经"
         read description: "您可从<strong>数以百计的圣经版本和语言</strong>中任意选择，并排比较两个版本，甚至可以选择字体和显示尺寸，用你自己喜欢的方式来在线阅读圣经。"
         study heading: "研读圣经"
-        study description: "用您喜爱的颜色来做<strong>高亮显示</ strong>，为您喜欢的圣经经节做<strong>标签</strong>，边阅读边做笔记。当您花时间在神的话语上时，其实也在同时建立您与圣经之间的亲密关系。"
+        study description: "用您喜爱的颜色来做<strong>高亮显示</strong>，为您喜欢的圣经经节做<strong>标签</strong>，边阅读边做笔记。当您花时间在神的话语上时，其实也在同时建立您与圣经之间的亲密关系。"
         subscribe heading: "订阅计划"
         subscribe description: "或覆盖整本圣经，或专注于一个主题，或跟从一个有恩赐的老师来灵修。选择一份读经计划，每一天就会有一段圣经供你阅读。"
         download heading: "随身携带"
@@ -698,7 +698,7 @@ zh-CN:
     try again: "再试一次"
   versions:
     filter: "筛选版本..."
-    see all: "查看全部版本"
+    see all: "查看全部圣经版本"
     courtesy of: "%{abbreviation}是由 %{publisher}提供"
     learn more: "获取更多信息"
     index title: "可用的版本"
