--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -222,7 +222,7 @@ zh-TW:
     my profile: "我的個人資料"
     edit profile: "編輯個人資料"
     update profile: "更新個人資料"
-    other user profile: "%{username}的個人主頁"
+    other user profile: "%{username}的個人檔案"
     my password: "更改我的密碼"
     edit password: "更改密碼"
     picture: "相片"
@@ -660,14 +660,14 @@ zh-TW:
         read heading: "閱讀聖經"
         read description: "您可以於<strong>數以百計的聖經版本和語言</strong>中任意選擇，並排比較兩個版本，甚至可以選擇字體和顯示尺寸，用您自己喜歡的方式來線上閱讀聖經。"
         study heading: "研讀聖經"
-        study description: "用您喜愛的顏色來設定<strong>醒目標記</ strong>，為您喜歡的聖經經節設定<strong>標籤</strong>，邊閱讀邊做筆記。當您花時間在神的話語上時，其實也在同時建立您與聖經之間的親密關係。"
+        study description: "用您喜愛的顏色來設定<strong>醒目標記</strong>，為您喜歡的聖經經節設定<strong>標籤</strong>，邊閱讀邊做筆記。當您花時間在神的話語上時，其實也在同時建立您與聖經之間的親密關係。"
         subscribe heading: "訂閱讀經計畫"
         subscribe description: "或研讀整本聖經，或專注於一個主題，或跟隨一個有恩賜的老師來靈修。選擇一份讀經計畫，每一天就會有一段聖經等候您來閱讀。"
         download heading: "隨身攜帶聖經"
         download description: "<a href='http://youversion.com/download'>下載</a>免費的<strong>聖經軟體</strong>到任何行動設備。當您在一個行動設備上使用聖經軟體時，您的筆記、書籤、醒目標記和讀經計畫等都將自動同步到您的其他行動設備上。"
       get started: "註冊免費帳號，開始體驗吧！"
       word with you: "上帝的話語與您同在！"
-      download action: "下載<strong>聖經軟體</strong>"
+      download action: "下載聖經軟體"
       download description: "下載免費的 YouVersion 聖經軟體道您的行動設備上吧！無論何時何地，神的話語都將伴您左右！"
       world installs: "全球軟體安裝次數"
   shared:
