--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -647,12 +647,17 @@ ru:
         now skipped: "Страница больше не будет показана."
       features:
         read heading: "Читайте Библию."
+        read description: "Выбирайте <strong>среди сотен версий Библии на разных языках</strong>. Сравнивайте две версии параллельно. Вы даже можете выбрать тип и размер шрифта. Пусть чтение Библии в Интернете будет таким, как вы захотите."
         study heading: "Изучайте Библию."
+        study description: "<strong>Подчеркивайте</strong> своим любимым цветом, заносите в <strong>закладки</strong> понравившиеся вам стихи из Библии, и делайте записи о том, что вы постигли. Вы не только будете проводить время в изучении Слова Божьего, но за одно и создадите дневник отражающий ваше взаимодействие с Библией."
         subscribe heading: "Читайте Библию по планам."
+        subscribe description: "Прочитайте всю Библию, сфокусируйтесь на какой-то теме или же узнайте о том, что говорят теологи и учителя в своих назидательных статьях. Выбирайте свой план и тогда каждый день вас будет ждать какой-то из фрагментов Библии."
         download heading: "Берите Библию с собой."
+        download description: "<a href='http://youversion.com/download'>Скачайте</a> приложение Библия на свое мобильное устройство совершенно бесплатно. Во время использования этого приложения ваши записи, закладки, отметки, планы и все остальное будут автоматически синхронизированы между всеми устройствами."
       get started: "Создайте бесплатный аккаунт."
       word with you: "Слово Божие всегда с вами."
       download action: "Установить приложение Библия"
+      download description: "Загрузите бесплатное приложение Библия на ваше мобильное устройство и ваша Библия будет всегда под рукой, где бы вы не находились."
       world installs: "людей уже установили приложение Библия!"
   shared:
     menu_settings:
