--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -69,7 +69,7 @@ sk:
   youversion: "YouVersion"
   username or email prompt: "Prihlasovacie meno (alebo email)"
   password prompt: "Heslo"
-  sign in: "Prihlásiť"
+  sign in: "Prihlásiť sa"
   sign in to youversion: "Prihlásiť sa na YouVersion"
   remove: "Odstrániť"
   confirm danger: "Áno, naozaj"
@@ -523,7 +523,7 @@ sk:
       username: "Zadajte vaše prihlasovacie meno"
       password: "Zadajte vaše heslo"
     with email: "Prihláste sa so svojou emailovou adresou"
-    with facebook: "Zaregistrovať sa s Facebook účtom"
+    with facebook: "Zaregistrujte sa s Facebook účtom"
     benefits title: "Získajte maximum"
     benefits blurb: "Vytvorenie YouVersion účtu vám poskytne prístup k mnohým funkciám, ako napríklad záložky a poznámky. Zobrazia sa na ktoromkoľvek zariadení, kde sa prihlásite. Účet tiež zjednodušuje možnosť zdieľať verše z Biblie s priateľmi, takže neváhajte a zaregistrujte sa, trvá to len zopár minút!"
     plan blurb: "Zdá sa, že chcete začať plán čítania. Výborne! Plány vám pomáhajú spraviť z Biblie súčasť vášho každodenného života. Prihláste sa, alebo si vytvorte účet a začnite čítať!"
@@ -652,7 +652,7 @@ sk:
       hero:
         heading: "Biblia vo vašom telefóne, tablete, či počítači."
         description: "YouVersion je jednoduchá a bezplatná Biblia, ktorá prináša Božie Slovo do vášho každodenného života."
-        learn more: "si pozrite bližšie informácie"
+        learn more: "pozrite si bližšie informácie"
         start reading: "Začnite čítať"
         skip in future: "Túto stránku nabudúce preskočiť"
         now skipped: "Táto stránka bude vynechaná."
@@ -660,7 +660,7 @@ sk:
         read heading: "Čítajte Bibliu."
         read description: "Vyberte si zo <strong>stoviek prekladov Biblie v mnohých jazykoch</strong>. Porovnávajte paralelne dva preklady. Nastavte si vlastný typ písma a veľkosť. Prispôsobte si svoju online Bibliu tak, ako vám to vyhovuje."
         study heading: "Študujte Bibliu."
-        study description: "<strong>Zvýraznite</strong> si verše vašou obľúbenou farbou, pridajte si ich medzi <strong>záložky</strong> a robte si poznámky o tom, čo vás zaujalo. Okrem trávenia času s Božím Slovom si tak môžete tvoriť denník toho, čo vás oslovilo"
+        study description: "<strong>Zvýraznite</strong> si verše vašou obľúbenou farbou, pridajte si ich medzi <strong>záložky</strong> a robte si poznámky o tom, čo vás zaujalo. Okrem trávenia času s Božím Slovom si tak môžete tvoriť denník toho, čo vás oslovilo."
         subscribe heading: "Využite plány čítania."
         subscribe description: "Zamerajte sa na jednu tému, prejdite celú Bibliu, alebo si prečítajte nami vybrané úseky. Zvoľte si váš plán a každý deň vás bude čakať pasáž Biblie."
         download heading: "Vezmite si Bibliu so sebou."
