i18n for API error message which are English only
* It's set up to pass in the API error as default when there is no i18n available, so at least it's a human readable string
* Currently, it's only enabled for change password, and creating any new record. Likely needs to be added everywhere we interface the API.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,21 @@
 ---
 en:
+  api:
+    users agree bool:                           "You must agree to the terms and conditions to create an account."
+    users confirm password matches:             "The new passwords do not match."
+    users email email:                          "The email address is invalid."
+    users email email rfc:                      "The email address you supplied is invalid."
+    users email not available:                  "An account is already registered with that email address."
+    users email not found:                      "There is no account with that email address."
+    users email required:                       "You must enter an email address."
+    users hash verified:                        "This account has already been verified."
+    users password change:                      "Your new password must be different than your old password."
+    users password length:                      "Your password must be at least 6 characters."
+    users password required:                    "You must enter a password."
+    users username alpha numeric extra:         "The username should be letters, numbers, or dashes."
+    users username not available:               "The username you supplied is not available."
+    users username or password invalid:         "The username or password you supplied is invalid."
+    users username required:                    "You must enter a username."
   now:                                          "Now"
   celebrating 50MM:                             "Celebrating 50 Million App Installs!"
   link:                                         "Link"
@@ -230,6 +246,7 @@ en:
     other user profile:                         "%{username}'s Profile"
     my password:                                "Change My Password"
     edit password:                              "Change Password"
+    edit password errors:                       "The following error(s) prevented changing your password:"
     picture:                                    "Picture"
     edit picture:                               "Change Picture"
     edit notifications:                         "Manage Notifications"
